--- a/WpfApp6/MainWindow.xaml
+++ b/WpfApp6/MainWindow.xaml
@@ -87,10 +87,15 @@
             </TabItem>
         </TabControl>
         <ListView x:Name="lvRecord" Grid.Column="2" Grid.Row="1" 
-                  d:ItemsSource="{d:SampleData ItemCount=5}" Background="LemonChiffon">
+                  d:ItemsSource="{Binding records}" Background="LemonChiffon" SelectionChanged="lvRecord_SelectionChanged">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn/>
+                    <GridViewColumn Header="學號" DisplayMemberBinding="{Binding SelectedStudent.StudentId}"/>
+                    <GridViewColumn Header="姓名" DisplayMemberBinding="{Binding SelectedStudent.StudentName}"/>
+                    <GridViewColumn Header="課程名稱" DisplayMemberBinding="{Binding SelectedCourse.CourseName}"/>
+                    <GridViewColumn Header="學分" DisplayMemberBinding="{Binding SelectedCourse.Point}"/>
+                    <GridViewColumn Header="類別" DisplayMemberBinding="{Binding SelectedCourse.Type}"/>
+                    <GridViewColumn Header="開課班級" DisplayMemberBinding="{Binding SelectedCourse.OpeningClass}"/>
                 </GridView>
             </ListView.View>
         </ListView>
@@ -98,9 +103,9 @@
             <Button x:Name="btnAdd" Content="選課" Width="80" Height="50"
                     Margin="0,100,0,0" FontSize="16" FontWeight="Bold" Click="btnAdd_Click"/>
             <Button x:Name="btnDelete" Content="退選" Width="80" Height="50"
-                    Margin="0,20,0,0" FontSize="16" FontWeight="Bold"/>
+                    Margin="0,20,0,0" FontSize="16" FontWeight="Bold" Click="btnDelete_Click"/>
             <Button x:Name="btnSave" Content="儲存" Width="80" Height="50"
-                    Margin="0,20,0,0" FontSize="16" FontWeight="Bold"/>
+                    Margin="0,20,0,0" FontSize="16" FontWeight="Bold" Click="btnSave_Click"/>
         </StackPanel>
     </Grid>
 </Window>
